--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-streamlit
-wikipedia
-pandas
-langchain
-openai
-pandas
-numpy
-streamlit_chat
+streamlit==1.22.0
+wikipedia==1.4.0
+pandas==1.3.5
+langchain==0.0.170
+openai==0.27.6
+pandas==1.3.5
+numpy==1.24.3
+streamlit_chat==0.0.2.2
